# networking-octopus

./: .env.example  .gitignore  README.md  pyproject.toml
src/agent/: __init__.py  claude.py  cli.py  config.py  deltas.py  discover.py  draft.py  enrich.py  learn.py  models.py  rank.py  sheets.py
src/agent/prompts/: draft_system.txt  enrich_system.txt  learn_system.txt  rank_system.txt
src/agent/state/: prompt_deltas.json
tests/: test_dedup.py  test_sheets_schema.py
