[project]
name = "linkedin-outreach-agent"
version = "0.1.0"
description = "CLI tool that finds LinkedIn profiles via Bright Data, ranks them with Claude, drafts outreach, and writes to a Google Sheet."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49",
    "requests>=2.31",
    "gspread>=6.0",
    "google-auth>=2.28",
    "google-auth-oauthlib>=1.2",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agent = "agent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent = ["prompts/*.txt", "state/*.json"]
